--- a/scripts/Illustrating_eDITH.Rmd
+++ b/scripts/Illustrating_eDITH.Rmd
@@ -53,7 +53,7 @@ library(terra)          # tools for spatial analysis and visualization
 The following flowchart outlines the workflow of `eDITH`. Functions and data types used in the following case studies are highlighted in red. Please refer to the accompanying manuscript (as well as the package documentation) for a detailed description of the package structure. 
 
 ```{r overview, echo=FALSE, out.width = '90%'}
-knitr::include_graphics("data/eDITH_scheme.png")
+knitr::include_graphics("../data/eDITH_scheme.png")
 
 ```
 
@@ -64,7 +64,7 @@ knitr::include_graphics("data/eDITH_scheme.png")
 We stored key information on the river morphology and hydraulics in `riverData.csv`. Importantly, we do not provide a Digital Elevation Model (DEM) of the regions of interest, but rather use `rivnet` to automatically download open-source DEM data, for which we only need the coordinates of the basins' outlets and the extents of the DEMs to be downloaded. Internally, DEM data are accessed via a call to the `elevatr` package, on which `rivnet` depends. 
 
 ```{r}
-riverData <- read.csv(file="data/riverData.csv") 
+riverData <- read.csv(file="../data/riverData.csv") 
 riverData
 ```
 
@@ -167,7 +167,7 @@ title('Discharge [m^3 s^-1]')
 Sampling sites' coordinates are contained in `samplingSitesSydenham.csv`. We can use `locate_site` from `rivnet` to identify the AG nodes (i.e., reaches) associated to the sampling sites.
 
 ```{r}
-samplingSitesSydenham <- read.csv(file="data/samplingSitesSydenham.csv")
+samplingSitesSydenham <- read.csv(file="../data/samplingSitesSydenham.csv")
 
 AGnode <- numeric(length(samplingSitesSydenham$X))
 for (j in 1: length(samplingSitesSydenham$X)){
@@ -224,7 +224,7 @@ Read counts are contained in `siteSpeciesTableSydenham.csv`. The following are t
 
 ```{r}
 # read species-by-site table
-SST$Sydenham <- read.csv("data/siteSpeciesTableSydenham.csv")
+SST$Sydenham <- read.csv("../data/siteSpeciesTableSydenham.csv")
 SST$Sydenham[is.na(SST$Sydenham)] <- 0 # change NAs to zeros
 # choose species with at least thr_species presences
 speciesID$Sydenham <- which(rowSums(SST$Sydenham[,-1]!=0) >= thr_species) 
@@ -297,7 +297,7 @@ pps <- posterior_pred_sim_eDITH(out, Sydenham)
 ```
   
 ```{r, echo=FALSE}
-fnam <- paste0('resultsSydenham/',nam,'.rda')
+fnam <- paste0('../resultsSydenham/',nam,'.rda')
 load(fnam)
 ```   
   
@@ -337,7 +337,7 @@ The following code loops through all species found (i.e., those with at least `t
 for (iS in 1:length(speciesID$Sydenham)){ # loop over species
   indSp <- speciesID$Sydenham[iS]
   nam <- SST$Sydenham[indSp,1]
-  fnam <- paste0('resultsSydenham/',nam,'.rda')
+  fnam <- paste0('../resultsSydenham/',nam,'.rda')
   
   if(!file.exists(fnam)){ # if eDITH results were already generated, skip
   values <- as.numeric(SST$Sydenham[indSp,-1])
@@ -401,7 +401,7 @@ Koide <- hydro_river(hd, Koide)
 
 In this case, all sampling sites are attributed to the correct reach by `locate_site`.
 ```{r}
-samplingSitesKoide <- read.csv(file="data/samplingSitesKoide.csv")
+samplingSitesKoide <- read.csv(file="../data/samplingSitesKoide.csv")
 
 AGnode <- numeric(length(samplingSitesKoide$X))
 for (j in 1: length(samplingSitesKoide$X)){
@@ -421,7 +421,7 @@ Read counts are contained in `siteSpeciesTableKoide.csv`. The following are the 
 
 ```{r}
  # read species-by-site table
-  SST$Koide <- read.csv("data/siteSpeciesTableKoide.csv")
+  SST$Koide <- read.csv("../data/siteSpeciesTableKoide.csv")
   SST$Koide[is.na(SST$Koide)] <- 0 
   speciesID$Koide <- which(rowSums(SST$Koide[,-1]!=0) >= thr_species) 
   SST$Koide[speciesID$Koide,1]
@@ -452,7 +452,7 @@ Read counts are contained in `siteSpeciesTableKoide.csv`. The following are the 
 for (iS in 1:length(speciesID$Koide)){ # loop over species
   indSp <- speciesID$Koide[iS]
   nam <- SST$Koide[indSp,1]
-  fnam <- paste0('resultsKoide/',nam,'.rda')
+  fnam <- paste0('../resultsKoide/',nam,'.rda')
   
   if(!file.exists(fnam)){ # if eDITH results were already generated, skip
   values <- as.numeric(SST$Koide[indSp,-1])
