--- a/scripts/Illustrating_eDITH.Rmd
+++ b/scripts/Illustrating_eDITH.Rmd
@@ -61,7 +61,7 @@ knitr::include_graphics("../data/eDITH_scheme.png")
 
 ## River data
 
-We stored key information on the river morphology and hydraulics in `riverData.csv`. Importantly, we do not provide a Digital Elevation Model (DEM) of the regions of interest, but rather use `rivnet` to automatically download open-source DEM data, for which we only need the coordinates of the basins' outlets and the extents of the DEMs to be downloaded. Internally, DEM data are accessed via a call to the `elevatr` package, on which `rivnet` depends. 
+We stored key information on the river morphology and hydraulics in `riverData.csv`. Importantly, we do not need to delineate a watershed with external GIS software, nor provide a Digital Elevation Model (DEM) of the regions of interest.  Rather, we  use `rivnet` to automatically download open-source DEM data, for which we only need the coordinates of the basins' outlets and  of the extent (i.e., lower left and upper right corners) of the DEMs to be downloaded. Internally, DEM data are accessed via a call to the `elevatr` package, on which `rivnet` depends. 
 
 ```{r}
 riverData <- read.csv(file="../data/riverData.csv") 
@@ -70,7 +70,7 @@ riverData
 
 - `river` provides a tag for the two case studies: `Sydenham` for [@balasingham2018] and `Koide` for [@sakata2021].
 - `X.outlet`, `Y.outlet` are the outlet coordinates (longitude and latitude) in the projected coordinate system defined by `EPSG`. `EPSG = 3085` corresponds to the NAD83(HARN) / Texas Centric Albers Equal Area, while `EPSG = 6684` corresponds to the JGD2011 / Japan Plane Rectangular CS XVI system. Please refer to [this website](https://epsg.org/) for an overview of EPSG codes. **It is fundamental that a projected coordinate system  (i.e., with coordinate values expressed in meters) is chosen**. In this way, all distances and areas contained in the `river` object produced by `rivnet` will be in m and m^2, respectively, which will ensure a correct functioning of `eDITH` functions.
-- `X.min`, `X.max`, `Y.min`, `Y.max` are the coordinates (in the system specified by `EPSG`) of the DEM that will be clipped and processed in order to delineate the watershed. **This region must be wider than the extent of the watershed**. It is thus advised to provide a large range for these values, especially when the shape of the watershed is not exactly known a priori. Obviously, the drawback of providing too large of a range is that the watershed delineation will be slowed down. However, subsequent processes on the extracted watershed (such as the application of eDITH) are independent of the choice of the initial coordinate range, provided that the watershed has been correctly extracted.
+- `X.min`, `X.max`, `Y.min`, `Y.max` are the coordinates (in the system specified by `EPSG`) of the DEM that will be clipped and processed in order to delineate the watershed. **This region must be at least as wide as (or ideally minimally wider than) the extent of the watershed**, such that the complete watershed can be reconstructed. It is thus advised to provide a large range for these values, especially when the shape of the watershed is not exactly known a priori. Obviously, the drawback of providing too large of a range is that the watershed delineation will be slowed down. However, subsequent processes on the extracted watershed (such as the application of eDITH) are independent of the choice of the initial coordinate range, provided that the watershed has been correctly extracted.
 - `z` is the zoom level at which the DEM will be downloaded. The exact cell size corresponding to a given zoom level depends on the latitude. Details are provided in the documentation of `elevatr`. `z = 10` corresponds to a cell size of about 50 m at the latitudes of the case study catchments. Increasing `z` by one unit will decrease the cell size by about twofold. 
 - `thrA` is the threshold area value (in m^2^) at which a DEM cell is assumed to be part of the channel network. This value should be small enough such that all headwaters on which eDNA sampling sites were located are contained in the extracted river network; at the same time, too small of a value would generate a river network with too many nodes, which would slow down the execution of eDITH considerably. See also [@carraro2022]. We used a larger `thrA` value for the Sydenham river because it is a larger watershed. 
 - `Q.outlet` and `w.outlet` are the values of discharge (in m^3^ s^-1^) and river width (in m) at the outlet, respectively. From these values, `rivnet`'s `hydro_river` can extrapolate hydrological variables needed for application of eDITH to all reaches of the river network. For this application, width values were inferred from aerial images (Google Maps). Mean annual discharge was reported in [@balasingham2018], while no discharge value was provided in [@sakata2021]. Therefore, we inferred the outlet discharge value by assuming that each km^2^ of drainage area would contribute a discharge of about 0.025 m^3^s^-1^, which is reasonable in temperate climates.
