--- a/scripts/Illustrating_eDITH.Rmd
+++ b/scripts/Illustrating_eDITH.Rmd
@@ -1,11 +1,8 @@
 ---
 title: "Illustrating the eDITH package with two case studies"
-author:
- - Luca Carraro^[University of Zurich and Eawag, Switzerland. luca.carraro@eawag.ch]
-  - Florian Altermatt^[University of Zurich and Eawag, Switzerland.]
 output:
-  #bookdown::pdf_document2:
-    bookdown::html_document2: 
+  bookdown::pdf_document2:
+    #bookdown::html_document2: 
       toc: true
       number_sections: true
       fig_caption: true
@@ -21,7 +18,7 @@ knitr::opts_chunk$set(
 
 # Overview
 
-This document exemplifies with case studies the application of the `eDITH` R package contained in "eDITH: an R-package to spatially project eDNA-based biodiversity across river networks with minimal prior information" by Luca Carraro and Florian Altermatt  submitted to *Methods in Ecology and Evolution*.
+This document exemplifies with case studies the application of the `eDITH` R package contained in "eDITH: an R-package to spatially project eDNA-based biodiversity across river networks with minimal prior information"  submitted to *Methods in Ecology and Evolution*.
 
 The two case studies are based on two published spatially replicated fish eDNA metabarcoding datasets across two catchments, the Sydenham river (Canada, 1623 km$^2$, 30 sampling sites; [@balasingham2018]) and the Koide river (Japan, 39 km$^2$, 11 sampling sites; [@sakata2021]). 
 
